Some refactoring of the code, and adding last missing experiments results about the norms expressed in the same language as the MAS objectives